--- a/F1_Legacy/cars.html
+++ b/F1_Legacy/cars.html
@@ -38,7 +38,7 @@
                 <h3>The Modern Era (2014 - Present)</h3>
                 <div class="car-evolution-grid">
                     <div class="car-era-card">
-                        <img src="images/car_evolutions/modern_car_1.jpg" alt="2022 F1 Car" class="car-era-photo">
+                        <img src="images/red-bull-racing-2022-f1-car-1.jpg" alt="2022 F1 Car" class="car-era-photo">
                         <h4>Ground Effect & Hybrid Power</h4>
                         <p class="car-era-description">
                             The current era is defined by the reintroduction of ground effect aerodynamics, larger wheels, and highly complex hybrid power units. These cars are incredibly fast, efficient, and technologically advanced, pushing the boundaries of engineering.
@@ -47,7 +47,7 @@
                         </p>
                     </div>
                     <div class="car-era-card">
-                        <img src="images/car_evolutions/modern_car_2.jpg" alt="2017 F1 Car" class="car-era-photo">
+                        <img src="images/2017.jpg" alt="2017 F1 Car" class="car-era-photo">
                         <h4>Wider, Faster, More Aggressive (2017-2021)</h4>
                         <p class="car-era-description">
                             Prior to the 2022 regulations, cars became significantly wider and more aggressive in appearance, generating immense amounts of downforce. This period saw record-breaking lap times, making them some of the fastest F1 cars in history.
@@ -62,7 +62,7 @@
                 <h3>The Turbo-Hybrid Era (2014 - 2016)</h3>
                 <div class="car-evolution-grid">
                     <div class="car-era-card">
-                        <img src="images/car_evolutions/turbo_hybrid_car.jpg" alt="2014 F1 Car" class="car-era-photo">
+                        <img src="images/2014.jpg" alt="2014 F1 Car" class="car-era-photo">
                         <h4>The Dawn of Hybrid Power</h4>
                         <p class="car-era-description">
                             This marked a revolutionary shift to 1.6-liter V6 turbo-hybrid power units, combining internal combustion engines with powerful energy recovery systems (ERS). While initially criticized for sound, these cars brought unparalleled efficiency and complex strategic elements.
@@ -77,7 +77,7 @@
                 <h3>The V8 Era (2006 - 2013)</h3>
                 <div class="car-evolution-grid">
                     <div class="car-era-card">
-                        <img src="images/car_evolutions/v8_car_1.jpg" alt="2006 F1 Car" class="car-era-photo">
+                        <img src="images/2006.jpg" alt="2006 F1 Car" class="car-era-photo">
                         <h4>Standardized V8s & Aero Wars</h4>
                         <p class="car-era-description">
                             To control costs and performance, F1 mandated 2.4-liter V8 engines. This era was characterized by intense aerodynamic development, with teams pushing the boundaries of winglets, bargeboards, and diffusers to gain an edge.
@@ -86,7 +86,7 @@
                         </p>
                     </div>
                     <div class="car-era-card">
-                        <img src="images/car_evolutions/v8_car_2.jpg" alt="2009 F1 Car" class="car-era-photo">
+                        <img src="images/2009.jpg" alt="2009 F1 Car" class="car-era-photo">
                         <h4>Slick Tires & KERS (2009)</h4>
                         <p class="car-era-description">
                             The 2009 season saw significant rule changes, including the return of slick tires and the introduction of KERS, a precursor to modern hybrid systems. Aerodynamic simplification aimed to improve overtaking.
@@ -101,7 +101,7 @@
                 <h3>The V10 Era (1995 - 2005)</h3>
                 <div class="car-evolution-grid">
                     <div class="car-era-card">
-                        <img src="images/car_evolutions/v10_car_1.jpg" alt="2004 F1 Car" class="car-era-photo">
+                        <img src="images/2004.jpeg" alt="2004 F1 Car" class="car-era-photo">
                         <h4>Peak Aerodynamics & V10 Scream</h4>
                         <p class="car-era-description">
                             Often considered the 'golden era' by many fans, these cars featured screaming V10 engines and highly sophisticated aerodynamics. This period saw incredible speeds and intense competition, with iconic cars and legendary drivers.
@@ -110,7 +110,7 @@
                         </p>
                     </div>
                     <div class="car-era-card">
-                        <img src="images/car_evolutions/v10_car_2.jpg" alt="1998 F1 Car" class="car-era-photo">
+                        <img src="images/1998.jpg" alt="1998 F1 Car" class="car-era-photo">
                         <h4>Grooved Tires & Narrower Cars (1998)</h4>
                         <p class="car-era-description">
                             Regulations introduced grooved tires and narrower cars to reduce cornering speeds. Despite this, aerodynamic development continued at a rapid pace, leading to highly refined and visually distinct machines.
