--- a/F1_Legacy/circ.html
+++ b/F1_Legacy/circ.html
@@ -17,7 +17,7 @@
                 <ul>
                     <li><a href="home.html">HOME</a></li>
                     <li><a href="timeline.html">TIMELINE</a></li>
-                    <li><a href="driver-profile.html">DRIVER PROFILE</a></li>
+                    <li><a href="driver_prof.html">DRIVER PROFILE</a></li>
                     <li><a href="team_hist.html">TEAM HISTORY</a></li>
                     <li><a href="circ.html">CIRCUITS</a></li>
                     <li><a href="cars.html">CAR EVOLUTIONS</a></li>
@@ -25,11 +25,8 @@
                 </ul>
             </nav>
         </header>
-
-        <!-- Main content for the Circuits page -->
         <main class="main-content">
             <div class="circuits-header-visual">
-                <!-- Background image/video placeholder for Circuits page header -->
                 <img src="images/circuits_header.jpg" alt="F1 Race Track View" class="circuits-background-image">
                 <div class="header-overlay-title-area">
                     <h2>Formula 1 Circuits</h2>
@@ -40,10 +37,8 @@
             <section class="circuits-section">
                 <h3>2025 Formula 1 Grand Prix Circuits</h3>
                 <div class="circuit-grid">
-
-                    <!-- Circuit Card: Australian Grand Prix -->
                     <div class="circuit-card">
-                        <img src="images/circuits/australia.jpg" alt="Albert Park Circuit" class="circuit-photo">
+                        <img src="images/aus.png" alt="Albert Park Circuit" class="circuit-photo">
                         <h4>FORMULA 1 LOUIS VUITTON AUSTRALIAN GRAND PRIX 2025</h4>
                         <p class="circuit-details">
                             <strong>Location:</strong> Melbourne, Australia<br>
@@ -52,10 +47,8 @@
                             A semi-permanent street circuit known for its fast, flowing sections and challenging braking zones. It combines public roads with purpose-built track sections, offering a unique blend of street circuit feel and traditional racing.
                         </p>
                     </div>
-
-                    <!-- Circuit Card: Chinese Grand Prix -->
                     <div class="circuit-card">
-                        <img src="images/circuits/china.jpg" alt="Shanghai International Circuit" class="circuit-photo">
+                        <img src="images/chi.png" alt="Shanghai International Circuit" class="circuit-photo">
                         <h4>FORMULA 1 HEINEKEN CHINESE GRAND PRIX 2025</h4>
                         <p class="circuit-details">
                             <strong>Location:</strong> Shanghai, China<br>
@@ -67,7 +60,7 @@
 
                     <!-- Circuit Card: Japanese Grand Prix -->
                     <div class="circuit-card">
-                        <img src="images/circuits/suzuka.jpg" alt="Suzuka International Racing Course" class="circuit-photo">
+                        <img src="images/jpn.png" alt="Suzuka International Racing Course" class="circuit-photo">
                         <h4>FORMULA 1 LENOVO JAPANESE GRAND PRIX 2025</h4>
                         <p class="circuit-details">
                             <strong>Location:</strong> Suzuka, Japan<br>
@@ -79,7 +72,7 @@
 
                     <!-- Circuit Card: Bahrain Grand Prix -->
                     <div class="circuit-card">
-                        <img src="images/circuits/bahrain.jpg" alt="Bahrain International Circuit" class="circuit-photo">
+                        <img src="images/bah.png" alt="Bahrain International Circuit" class="circuit-photo">
                         <h4>FORMULA 1 GULF AIR BAHRAIN GRAND PRIX 2025</h4>
                         <p class="circuit-details">
                             <strong>Location:</strong> Sakhir, Bahrain<br>
@@ -91,7 +84,7 @@
 
                     <!-- Circuit Card: Saudi Arabian Grand Prix -->
                     <div class="circuit-card">
-                        <img src="images/circuits/saudi_arabia.jpg" alt="Jeddah Corniche Circuit" class="circuit-photo">
+                        <img src="images/sau.png" alt="Jeddah Corniche Circuit" class="circuit-photo">
                         <h4>FORMULA 1 STC SAUDI ARABIAN GRAND PRIX 2025</h4>
                         <p class="circuit-details">
                             <strong>Location:</strong> Jeddah, Saudi Arabia<br>
@@ -103,7 +96,7 @@
 
                     <!-- Circuit Card: Miami Grand Prix -->
                     <div class="circuit-card">
-                        <img src="images/circuits/miami.jpg" alt="Miami International Autodrome" class="circuit-photo">
+                        <img src="images/mia.png" alt="Miami International Autodrome" class="circuit-photo">
                         <h4>FORMULA 1 CRYPTO.COM MIAMI GRAND PRIX 2025</h4>
                         <p class="circuit-details">
                             <strong>Location:</strong> Miami Gardens, USA<br>
@@ -115,7 +108,7 @@
 
                     <!-- Circuit Card: Emilia Romagna Grand Prix -->
                     <div class="circuit-card">
-                        <img src="images/circuits/imola.jpg" alt="Autodromo Internazionale Enzo e Dino Ferrari" class="circuit-photo">
+                        <img src="images/imo.png" alt="Autodromo Internazionale Enzo e Dino Ferrari" class="circuit-photo">
                         <h4>FORMULA 1 AWS GRAN PREMIO DEL MADE IN ITALY E DELL'EMILIA-ROMAGNA 2025</h4>
                         <p class="circuit-details">
                             <strong>Location:</strong> Imola, Italy<br>
@@ -127,7 +120,7 @@
 
                     <!-- Circuit Card: Monaco Grand Prix -->
                     <div class="circuit-card">
-                        <img src="images/circuits/monaco.jpg" alt="Circuit de Monaco" class="circuit-photo">
+                        <img src="images/mon.png" alt="Circuit de Monaco" class="circuit-photo">
                         <h4>FORMULA 1 TAG HEUER GRAND PRIX DE MONACO 2025</h4>
                         <p class="circuit-details">
                             <strong>Location:</strong> Monte Carlo, Monaco<br>
@@ -139,7 +132,7 @@
 
                     <!-- Circuit Card: Spanish Grand Prix -->
                     <div class="circuit-card">
-                        <img src="images/circuits/barcelona.jpg" alt="Circuit de Barcelona-Catalunya" class="circuit-photo">
+                        <img src="images/span.png" alt="Circuit de Barcelona-Catalunya" class="circuit-photo">
                         <h4>FORMULA 1 ARAMCO GRAN PREMIO DE ESPAÑA 2025</h4>
                         <p class="circuit-details">
                             <strong>Location:</strong> Montmeló, Spain<br>
@@ -151,7 +144,7 @@
 
                     <!-- Circuit Card: Canadian Grand Prix -->
                     <div class="circuit-card">
-                        <img src="images/circuits/canada.jpg" alt="Circuit Gilles Villeneuve" class="circuit-photo">
+                        <img src="images/can.png" alt="Circuit Gilles Villeneuve" class="circuit-photo">
                         <h4>FORMULA 1 PIRELLI GRAND PRIX DU CANADA 2025</h4>
                         <p class="circuit-details">
                             <strong>Location:</strong> Montreal, Canada<br>
@@ -163,7 +156,7 @@
 
                     <!-- Circuit Card: Austrian Grand Prix -->
                     <div class="circuit-card">
-                        <img src="images/circuits/austria.jpg" alt="Red Bull Ring" class="circuit-photo">
+                        <img src="images/aust.png" alt="Red Bull Ring" class="circuit-photo">
                         <h4>FORMULA 1 MSC CRUISES AUSTRIAN GRAND PRIX 2025</h4>
                         <p class="circuit-details">
                             <strong>Location:</strong> Spielberg, Austria<br>
@@ -175,7 +168,7 @@
 
                     <!-- Circuit Card: British Grand Prix -->
                     <div class="circuit-card">
-                        <img src="images/circuits/silverstone.jpg" alt="Silverstone Circuit" class="circuit-photo">
+                        <img src="images/sil.png" alt="Silverstone Circuit" class="circuit-photo">
                         <h4>FORMULA 1 QATAR AIRWAYS BRITISH GRAND PRIX 2025</h4>
                         <p class="circuit-details">
                             <strong>Location:</strong> Silverstone, United Kingdom<br>
@@ -187,7 +180,7 @@
 
                     <!-- Circuit Card: Belgian Grand Prix -->
                     <div class="circuit-card">
-                        <img src="images/circuits/spa.jpg" alt="Circuit de Spa-Francorchamps" class="circuit-photo">
+                        <img src="images/bel.png" alt="Circuit de Spa-Francorchamps" class="circuit-photo">
                         <h4>FORMULA 1 MOËT & CHANDON BELGIAN GRAND PRIX 2025</h4>
                         <p class="circuit-details">
                             <strong>Location:</strong> Stavelot, Belgium<br>
@@ -199,7 +192,7 @@
 
                     <!-- Circuit Card: Hungarian Grand Prix -->
                     <div class="circuit-card">
-                        <img src="images/circuits/hungary.jpg" alt="Hungaroring" class="circuit-photo">
+                        <img src="images/hun.png" alt="Hungaroring" class="circuit-photo">
                         <h4>FORMULA 1 LENOVO HUNGARIAN GRAND PRIX 2025</h4>
                         <p class="circuit-details">
                             <strong>Location:</strong> Mogyoród, Hungary<br>
@@ -211,7 +204,7 @@
 
                     <!-- Circuit Card: Dutch Grand Prix -->
                     <div class="circuit-card">
-                        <img src="images/circuits/zandvoort.jpg" alt="Circuit Zandvoort" class="circuit-photo">
+                        <img src="images/dut.png" alt="Circuit Zandvoort" class="circuit-photo">
                         <h4>FORMULA 1 HEINEKEN DUTCH GRAND PRIX 2025</h4>
                         <p class="circuit-details">
                             <strong>Location:</strong> Zandvoort, Netherlands<br>
@@ -223,7 +216,7 @@
 
                     <!-- Circuit Card: Italian Grand Prix -->
                     <div class="circuit-card">
-                        <img src="images/circuits/monza.jpg" alt="Autodromo Nazionale Monza" class="circuit-photo">
+                        <img src="images/ita.png" alt="Autodromo Nazionale Monza" class="circuit-photo">
                         <h4>FORMULA 1 PIRELLI GRAN PREMIO D’ITALIA 2025</h4>
                         <p class="circuit-details">
                             <strong>Location:</strong> Monza, Italy<br>
