--- a/F1_Legacy/driver_prof.html
+++ b/F1_Legacy/driver_prof.html
@@ -33,19 +33,13 @@
 
                 <ul> 
 
-                    <li><a href="home.html">HOME</a></li> 
-
-                    <li><a href="timeline.html">TIMELINE</a></li> 
-
-                    <li><a href="driver_prof.html">DRIVER PROFILE</a></li> 
-
-                    <li><a href="team-hist.html">TEAM HISTORY</a></li> 
-
-                    <li><a href="circ.html">CIRCUITS</a></li> 
-
-                    <li><a href="cars.html">CAR EVOLUTIONS</a></li> 
-
-                    <li><a href="moments.html">MOMENTS</a></li> 
+                  <li><a href="home.html">HOME</a></li>
+                    <li><a href="timeline.html">TIMELINE</a></li>
+                    <li><a href="driver_prof.html">DRIVER PROFILE</a></li>
+                    <li><a href="team_hist.html">TEAM HISTORY</a></li>
+                    <li><a href="circ.html">CIRCUITS</a></li>
+                    <li><a href="cars.html">CAR EVOLUTIONS</a></li>
+                    <li><a href="moments.html">MOMENTS</a></li>
 
                 </ul> 
 
